--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
         android:id="@+id/detect"
         android:layout_width="302dp"
         android:layout_height="87dp"
-        android:layout_marginTop="158dp"
+        android:layout_marginTop="130dp"
+        android:background="#CCF9A0"
         android:text="장애물탐지"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +24,9 @@
         android:layout_width="302dp"
         android:layout_height="87dp"
         android:layout_marginTop="40dp"
+        android:background="#CCF9A0"
         android:text="네비게이션"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +37,9 @@
         android:layout_width="302dp"
         android:layout_height="87dp"
         android:layout_marginTop="40dp"
+        android:background="#CCF9A0"
         android:text="보호자정보등록"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +50,9 @@
         android:layout_width="302dp"
         android:layout_height="87dp"
         android:layout_marginTop="40dp"
-        android:text="글자 읽어주기"
+        android:background="#CCF9A0"
+        android:text="텍스트 읽어주기"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/parent" />
