--- a/app/src/main/res/layout/activity_barrier.xml
+++ b/app/src/main/res/layout/activity_barrier.xml
@@ -16,4 +16,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/voice" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
+        app:layout_constraintBottom_toTopOf="@id/voicerecoder"
+        android:background="@drawable/obstacle"
+        tools:ignore="MissingConstraints" />
+
+
 </android.support.constraint.ConstraintLayout>
