--- a/app/src/main/res/layout/activity_nevi.xml
+++ b/app/src/main/res/layout/activity_nevi.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".NeviActivity">
 
-    <TextView
+    <EditText
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginBottom="712dp"
         android:gravity="center_horizontal|center_vertical"
-        android:text="TextView"
+        android:text="위치 검색"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -20,15 +20,38 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="현재 내 위치 주소"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="180dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:ignore="SpeakableTextPresentCheck" />
+
+    <ImageView
+        android:id="@+id/voicerecoder"
+        android:layout_width="128dp"
+        android:layout_height="126dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/voice" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
