--- a/app/src/main/res/layout/activity_text_activity.xml
+++ b/app/src/main/res/layout/activity_text_activity.xml
@@ -1,40 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TextActivity">
-
-    <ImageView
-        android:id="@+id/voicerecoder"
-        android:layout_width="128dp"
-        android:layout_height="126dp"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/voice" />
-
+    tools:context=".TextActivity"
+    android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="꽁꽁 얼어붙은 한강 위로 고양이가 걸어다닙니다."
-        android:textAlignment="center"
-        android:padding="10dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/edge"
-        app:layout_constraintBottom_toTopOf="@id/voicerecoder"
-        tools:ignore="MissingConstraints" />
+        android:id="@+id/textView"/>
+    <Button
+        android:id="@+id/capture_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Take Picture"
+        android:layout_centerInParent="true"/>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="450dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/meow"
-        tools:ignore="MissingConstraints" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
