--- a/app/src/main/res/layout/activity_text_activity.xml
+++ b/app/src/main/res/layout/activity_text_activity.xml
@@ -12,7 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Take Picture"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
