--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,70 +8,44 @@
 
     <Button
         android:id="@+id/detect"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#CCF9A0"
         android:text="장애물탐지"
         android:textSize="24sp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_margin="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/nevi"
+        app:layout_constraintVertical_weight="1"/>
 
     <Button
         android:id="@+id/nevi"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#CCF9A0"
         android:text="네비게이션"
+        android:layout_margin="20dp"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detect" />
-
-    <!--<Button
-        android:id="@+id/parent"
-        android:layout_width="323dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="40dp"
-        android:background="#CCF9A0"
-        android:text="보호자정보등록"
-        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nevi" />-->
+        app:layout_constraintTop_toBottomOf="@id/detect"
+        app:layout_constraintBottom_toTopOf="@id/textreader"
+        app:layout_constraintVertical_weight="1"/>
 
     <Button
         android:id="@+id/textreader"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#CCF9A0"
         android:text="텍스트 읽어주기"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nevi" />
-
-    <ImageView
-        android:id="@+id/voicerecoder"
-        android:layout_width="128dp"
-        android:layout_height="126dp"
-        android:layout_marginBottom="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nevi"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/voice" />
-
+        app:layout_constraintVertical_weight="1"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
