--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,9 @@
         <item name="colorAccent">@color/teal_200</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!--<item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>-->
+        <item name="android:windowBackground">@mipmap/img</item>
+    </style>
 </resources>
