--- a/app/src/main/res/layout/activity_nevi.xml
+++ b/app/src/main/res/layout/activity_nevi.xml
@@ -6,18 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".NeviActivity">
 
+
     <EditText
         android:id="@+id/origin"
         android:layout_width="232dp"
         android:layout_height="67dp"
-        android:layout_marginBottom="712dp"
+        android:layout_marginStart="7dp"
         android:gravity="center_horizontal|center_vertical"
         android:inputType="text"
         android:text="출발지 입력"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/destination"
@@ -26,7 +25,8 @@
         android:gravity="center"
         android:inputType="text"
         android:text="목적지 입력"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/origin"
+        app:layout_constraintStart_toStartOf="@+id/origin"
         app:layout_constraintTop_toBottomOf="@+id/origin" />
 
     <fragment
@@ -34,18 +34,18 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="180dp"
+        android:layout_marginBottom="130dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/destination" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/destination"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/voicerecoder"
-        android:layout_width="128dp"
-        android:layout_height="126dp"
+        android:layout_width="106dp"
+        android:layout_height="75dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,12 +56,26 @@
         android:id="@+id/get_directions_button"
         android:layout_width="173dp"
         android:layout_height="124dp"
-        android:layout_marginBottom="5dp"
-        android:text="경로 찾기"
+        android:backgroundTint="#DBF2C5"
+
         android:onClick="getDirections"
-        app:layout_constraintBottom_toTopOf="@+id/map"
+        android:text="경로 찾기"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/destination"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/origin"
+        app:layout_constraintTop_toTopOf="@+id/origin" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="412dp"
+        android:layout_height="71dp"
+        android:paddingLeft="15sp"
+        android:paddingTop="10sp"
+        android:text="네비게이션"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
