--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,6 @@
     <style name="SplashTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!--<item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>-->
-        <item name="android:windowBackground">@mipmap/img</item>
+        <item name="android:windowBackground">@mipmap/title_img</item>
     </style>
 </resources>
