manifest title 다시 삽입 스플래시 화면 오류 고침~

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/detect"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#CCF9A0"
+        android:background="@drawable/btn_main"
         android:text="장애물탐지"
         android:textSize="24sp"
         android:layout_margin="20dp"
@@ -24,7 +24,7 @@
         android:id="@+id/nevi"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#CCF9A0"
+        android:background="@drawable/btn_main"
         android:text="네비게이션"
         android:layout_margin="20dp"
         android:textSize="24sp"
@@ -38,7 +38,7 @@
         android:id="@+id/textreader"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#CCF9A0"
+        android:background="@drawable/btn_main"
         android:text="텍스트 읽어주기"
         android:textSize="24sp"
         android:layout_margin="20dp"
