--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,8 +3,8 @@
     <style name="Theme.Eyesone" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryDark">@color/white</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimaryDark">#5B5B5B</item>
+        <item name="colorAccent">#5B5B5B</item>
         <item name="windowNoTitle">true</item>
         <!-- Customize your theme here. -->
     </style>
