--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -5,35 +5,66 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     tools:context=".CameraActivity"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="👀 텍스트 인식"
+        android:fontFamily="@font/pretendardbold"
+        android:textSize="25sp"
+        android:textColor="#5B5B5B"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="left"/>
+
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="350dp"
         android:id="@+id/imageView"/>
 
     <Button
         android:id="@+id/button"
-        android:layout_width="186dp"
-        android:layout_height="wrap_content"
-        android:text="camera"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:text="Camera"
         android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="인식된 텍스트 : "
-        android:textSize="20dp"
+        android:text="어떤 내용인가요?"
+        android:paddingTop="8dp"
+        android:textSize="14sp"
+        android:fontFamily="@font/pretendardsemibold"
+        android:background="@drawable/tv_question"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center"/>
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="left"
+        android:textAlignment="center"
+        tools:ignore="RtlCompat" />
 
     <TextView
+        android:id="@+id/text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:textSize="20dp"
+        android:textSize="18dp"
+        android:scrollbars="vertical"
+        android:layout_gravity="right"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/tv_answer"
+        />
+    <ImageView
+        android:id="@+id/voicerecoder"
+        android:layout_width="77dp"
+        android:layout_height="75dp"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center"
-        android:id="@+id/text_view"/>
+        android:layout_marginTop="10dp"
+        android:background="@drawable/voice" />
 
 </LinearLayout>
