--- a/app/src/main/res/layout/activity_nevi.xml
+++ b/app/src/main/res/layout/activity_nevi.xml
@@ -2,45 +2,51 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id = "@+id/layout_map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NeviActivity">
 
 
-    <EditText
+    <TextView
         android:id="@+id/origin"
-        android:layout_width="232dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="7dp"
-        android:gravity="center_horizontal|center_vertical"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:inputType="text"
-        android:text="출발지 입력"
+        android:paddingLeft="30sp"
+        android:paddingRight="30sp"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <EditText
-        android:id="@+id/destination"
-        android:layout_width="232dp"
+    <Button
+        android:id="@+id/btn_destination"
+        android:layout_width="0dp"
         android:layout_height="67dp"
+        android:backgroundTint="#DBF2C5"
         android:gravity="center"
         android:inputType="text"
-        android:text="목적지 입력"
+        android:text="목적지를 입력하세요."
         app:layout_constraintEnd_toEndOf="@+id/origin"
         app:layout_constraintStart_toStartOf="@+id/origin"
         app:layout_constraintTop_toBottomOf="@+id/origin" />
 
     <fragment
-        android:id="@+id/map"
+        android:id="@+id/Nevi"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="130dp"
+        android:layout_height="401dp"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/destination"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_destination"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/voicerecoder"
@@ -51,20 +57,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/voice" />
-
-    <Button
-        android:id="@+id/get_directions_button"
-        android:layout_width="173dp"
-        android:layout_height="124dp"
-        android:backgroundTint="#DBF2C5"
-
-        android:onClick="getDirections"
-        android:text="경로 찾기"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/destination"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/origin"
-        app:layout_constraintTop_toTopOf="@+id/origin" />
 
     <TextView
         android:id="@+id/textView2"
@@ -82,14 +74,29 @@
         android:id="@+id/mapImg"
         android:layout_width="38dp"
         android:layout_height="53dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/origin"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
         app:srcCompat="@drawable/map" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="415dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:text="현재 내 위치 정보"
+        android:paddingLeft="30sp"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/origin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
