--- a/app/src/main/res/layout/activity_nevi.xml
+++ b/app/src/main/res/layout/activity_nevi.xml
@@ -76,6 +76,8 @@
         android:layout_height="53dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
