--- a/app/src/main/res/layout/activity_nevi.xml
+++ b/app/src/main/res/layout/activity_nevi.xml
@@ -24,29 +24,27 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/btn_destination"
+        android:id="@+id/btn_setdes"
         android:layout_width="0dp"
         android:layout_height="67dp"
         android:backgroundTint="#DBF2C5"
         android:gravity="center"
         android:inputType="text"
-        android:text="목적지를 입력하세요."
+        android:text="목적지로 설정"
         app:layout_constraintEnd_toEndOf="@+id/origin"
+        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="@+id/origin"
-        app:layout_constraintTop_toBottomOf="@+id/origin" />
+        app:layout_constraintTop_toBottomOf="@+id/set_address_Text" />
 
     <fragment
         android:id="@+id/Nevi"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="0dp"
-        android:layout_height="401dp"
-        android:layout_marginBottom="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="406dp"
+        android:layout_height="350dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_destination"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_setdes" />
 
     <ImageView
         android:id="@+id/voicerecoder"
@@ -97,6 +95,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
+    <EditText
+        android:id="@+id/set_address_Text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:hint="목적지를 입력하세요."
+        android:paddingLeft="30sp"
+        android:inputType="textPostalAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/origin" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
