--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
                     android:fontFamily="@font/pretendardregular"
                     android:textColor="#5B5B5B"
                     android:text="카메라를 통해 장애물을\n인식하고 사용자에게\n 장애물 알림을 보냅니다."
-                    android:textSize="18sp" />
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <ImageView
@@ -107,7 +107,7 @@
                     android:textColor="#5B5B5B"
                     android:fontFamily="@font/pretendardregular"
                     android:text="음성인식을 통해\n목적지를 인식하고\n사용자의 길안내를 돕습니다."
-                    android:textSize="18sp" />
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <ImageView
@@ -134,6 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:padding="2dp"
                 android:gravity="center">
 
                 <TextView
@@ -150,7 +151,7 @@
                     android:fontFamily="@font/pretendardregular"
                     android:textColor="#5B5B5B"
                     android:text="텍스트를 인식하여\n음성으로 나타내어 줍니다."
-                    android:textSize="18sp" />
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <ImageView
