--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -75,6 +75,7 @@
             android:textSize="14dp"
             android:scrollbars="vertical"
             android:layout_gravity="right"
+            android:padding="15dp"
             android:textAlignment="center"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
